app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-service
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: app-service
  template:
    metadata:
      labels:
        app: app-service
    spec:
      containers:
        - name: app-service
          image: ss880/mynewapp1:appimage
          ports:
            - containerPort: 5000
