auth.yml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: auth-service
spec:
  replicas: 1   
  selector:
    matchLabels:
      app: auth-service  
  template:
    metadata:
      labels:
        app: auth-service 
  spec:
    containers: 
        - name: auth-service
          image: ss880/mynewapp1:authimage
          ports:
            - containerPort: 5001
