book.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
      - name: book-service
        image: ss880/mynewapp1:bookimage
        ports:
        - containerPort: 5002
