app-svc.yml
apiVersion: v1
kind: Service 
spec:
  selector:
    app: app-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
