auth-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service 
spec:
  selector:
    app: auth-service 
  ports:
    - protocol: TCP 
      port: 5001 
      targetPort: 5001  
  type: ClusterIP
