book-svc.yml
apiVersion: v1
kind: Service  
metadata:
  name: book-service    
spec:
  selector:
    app: book-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002    
  type: ClusterIP
