borrow-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: borrow-service
spec:
  selector:
    app: borrow-service 
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
