stateful-svc.yml
apiVersion: v1
kind: Service 
metadata:
  name: db-service    
spec:
  selector:
    app: db-service 
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306  
 ClusterIp: None
