ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: library-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5001

      - path: /book
        pathType: Prefix
        backend:
          service:
            name: book-service
            port:
              number: 5002

      - path: /borrow
        pathType: Prefix
        backend:
          service:
            name: borrow-service
            port:
              number: 5003

      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 5000
