netpol-auth.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-service-policy
spec:
  podSelector:
    matchLabels:
      app: auth-service
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app
    ports:
    - protocol: TCP
      port: 5001

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db-service
    ports:
    - protocol: TCP
      port: 3306
