netpol-book.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: book-service-policy
spec:
  podSelector:
    matchLabels:
      app: book-service
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: app-service
    ports:
    - protocol: TCP
      port: 5002

  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db-service
    ports:
    - protocol: TCP
      port: 3306
