netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: microservice-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
